// proto/user.proto
syntax = "proto3";

package user;

service UserService {
  rpc FindOne (UserById) returns (User) {}
  rpc FindAll (Empty) returns (Users) {}
  rpc Create (CreateUserRequest) returns (User) {}
}

message Empty {}

message UserById {
  string id = 1;
}

message CreateUserRequest {
  string name = 1;
  int32 age = 2;
  string email = 3;
}

message User {
  string id = 1;
  string name = 2;
  int32 age = 3;
  string email = 4;
}

message Users {
  repeated User users = 1;
}